PRL-4606 - Added send and reply link post review of documents